# OpenSubdiv

examples/glViewer/: glViewer.cpp
opensubdiv/: NOTES.txt  version.h
opensubdiv/bfr/: CMakeLists.txt  faceBuilders.cpp  faceBuilders.h  faceDescriptors.cpp  faceDescriptors.h  limitSurface.cpp  limitSurface.h  limitSurfaceFactory.cpp  limitSurfaceFactory.h  parameterization.cpp  parameterization.h  refinerLimitSurfaceFactory.cpp  refinerLimitSurfaceFactory.h  tessellation.cpp  tessellation.h  topologyCache.cpp  topologyCache.h  types.h
opensubdiv/far/: CMakeLists.txt  LEVEL_0_PATCHES.txt  LEVEL_0_STENCILS.txt  NOTES.txt  README.txt  basePatch.cpp  basePatch.h  basePatchFactory.cpp  basePatchFactory.h  patchMap.cpp  patchMap.h  patchTable.cpp  patchTable.h  patchTableFactory.cpp  patchTableFactory.h  patchTree.cpp  patchTree.h  patchTreeCache.h  patchTreeFactory.cpp  patchTreeFactory.h  primvarRefiner.h  stencilTable.h  stencilTableFactory.cpp  topologyRefiner.cpp  topologyRefiner.h  topologyRefinerFactory.cpp  topologyRefinerFactory.h
opensubdiv/hbr/: face.h  mesh.h  vertex.h
opensubdiv/osd/: mesh.h
opensubdiv/sdc/: crease.h  scheme.h
opensubdiv/vtr/: NOTES.txt  componentInterfaces.h  fvarLevel.h  fvarRefinement.cpp  level.cpp  level.h
regression/far_facevarying/: CMakeLists.txt  NOTES.txt  init_shapes.h  main.cpp  testMesh.cpp  testMesh.h
regression/far_patches/: CMakeLists.txt  NOTES.txt  init_shapes.h  main.cpp
regression/far_perf/: far_perf.cpp
regression/far_stencils/: CMakeLists.txt  init_shapes.h  init_shapes_all.h  main.cpp
tutorials/bfr/: CMakeLists.txt
tutorials/bfr/tutorial_1_1/: CMakeLists.txt  main.cpp
tutorials/bfr/tutorial_1_2/: CMakeLists.txt  main.cpp
tutorials/far/tutorial_3_2/: CMakeLists.txt  customRefinerFactory.cpp  customRefinerFactory.h  far_tutorial_3_2.cpp
tutorials/far/tutorial_9/: far_tutorial_9.cpp
tutorials/far/tutorial_A/: CMakeLists.txt  far_tutorial_A.cpp
